--- a/package.json
+++ b/package.json
@@ -58,5 +58,9 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "react-hamburger-menu": "^1.1.1",
+    "sass-rem": "^2.0.1"
+  }
 }
