--- a/package.json
+++ b/package.json
@@ -15,8 +15,13 @@
   "scripts": {
     "test": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
-    "build": "rollup -c",
-    "start": "rollup -c -w",
+    "build": "npm run clean && npm run buildJs && npm run buildCss",
+    "buildCss": "node --no-warnings ./build.js",
+    "buildCss:watch": "npm run buildCss && onchange 'src/**/*.scss' -- npm run buildCss",
+    "buildJs": "rollup -c",
+    "buildJs:watch": "rollup -c -w",
+    "clean": "rm -rf dist && mkdir dist",
+    "start": "npm run clean && concurrently --kill-others \"npm run buildJs:watch\" \"npm run buildCss:watch\"",
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build"
@@ -28,14 +33,18 @@
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
+    "autoprefixer": "^9.4.6",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "camelcase": "^5.0.0",
     "classnames": "^2.2.6",
+    "concurrently": "^4.1.0",
     "cross-env": "^5.1.4",
+    "cssnano": "^4.1.8",
     "eslint": "^5.12.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
@@ -45,6 +54,11 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
+    "glob": "^7.1.3",
+    "onchange": "^5.2.0",
+    "postcss": "^7.0.14",
+    "postcss-easy-import": "^3.0.0",
+    "precss": "^4.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^1.1.4",
@@ -53,8 +67,8 @@
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-url": "^1.4.0",
+    "scss-bundle": "^2.4.0"
   },
   "files": [
     "dist"
