--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "onchange": "^5.2.0",
     "postcss": "^7.0.14",
     "postcss-easy-import": "^3.0.0",
+    "postcss-namespace": "^1.1.1",
     "precss": "^4.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
