--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,7 @@
 {
   "presets": [
-    ["env", {
-      "modules": false
+    ["@babel/preset-env", {
     }],
-    "stage-0",
-    "react"
+    "@babel/preset-react"
   ]
 }
