--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "npm": ">=5"
   },
   "scripts": {
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "build": "npm run clean && npm run buildJs && npm run buildCss",
     "buildCss": "node --no-warnings ./build.js",
     "buildCss:watch": "npm run buildCss && onchange 'src/**/*.scss' -- npm run buildCss",
@@ -32,29 +32,32 @@
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "@svgr/rollup": "^2.4.1",
-    "autoprefixer": "^9.4.6",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.5",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "autoprefixer": "^9.4.7",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.0.0",
+    "babel-runtime": "^6.26.0",
     "camelcase": "^5.0.0",
     "classnames": "^2.2.6",
     "concurrently": "^4.1.0",
     "cross-env": "^5.1.4",
     "cssnano": "^4.1.8",
-    "eslint": "^5.12.1",
+    "eslint": "^5.13.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
     "glob": "^7.1.3",
+    "jest": "^24.0.0",
+    "jest-dom": "^3.0.1",
     "onchange": "^5.2.0",
     "postcss": "^7.0.14",
     "postcss-easy-import": "^3.0.0",
@@ -62,9 +65,9 @@
     "precss": "^4.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.4",
+    "react-testing-library": "^5.4.4",
     "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
