--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,11 @@
 {
   "presets": [
-    ["@babel/preset-env", {
-    }],
+    [
+      "@babel/preset-env", 
+      {
+        "targets": "> 0.05%, not dead",
+      }
+    ],
     "@babel/preset-react"
   ]
 }
