--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "classnames": "^2.2.6",
     "concurrently": "^4.1.0",
     "cross-env": "^5.1.4",
-    "cssnano": "^4.1.8",
     "eslint": "^5.13.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
@@ -60,6 +59,7 @@
     "jest-dom": "^3.0.1",
     "onchange": "^5.2.0",
     "postcss": "^7.0.14",
+    "postcss-combine-duplicated-selectors": "^7.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-namespace": "^1.1.1",
     "precss": "^4.0.0",
@@ -71,8 +71,7 @@
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-url": "^1.4.0",
-    "scss-bundle": "^2.4.0"
+    "rollup-plugin-url": "^1.4.0"
   },
   "files": [
     "dist"
