--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "module": "dist/index.es.js",
   "jsnext:main": "dist/index.es.js",
   "engines": {
-    "node": ">=8",
-    "npm": ">=5"
+    "node": ">=10",
+    "npm": ">=6"
   },
   "scripts": {
     "test": "jest",
@@ -22,9 +22,7 @@
     "buildJs:watch": "rollup -c -w",
     "clean": "rm -rf dist && mkdir dist",
     "start": "npm run clean && concurrently --kill-others \"npm run buildJs:watch\" \"npm run buildCss:watch\"",
-    "prepare": "npm run build",
-    "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "prepare": "npm run build"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
@@ -36,7 +34,6 @@
     "@babel/plugin-external-helpers": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "@svgr/rollup": "^2.4.1",
     "autoprefixer": "^9.4.7",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.0.0",
@@ -44,12 +41,10 @@
     "camelcase": "^5.0.0",
     "classnames": "^2.2.6",
     "concurrently": "^4.1.0",
-    "cross-env": "^5.1.4",
     "eslint": "^5.13.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
     "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^3.1.0",
@@ -70,8 +65,7 @@
     "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
-    "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-url": "^1.4.0"
+    "rollup-plugin-peer-deps-external": "^2.2.0"
   },
   "files": [
     "dist"
