--- a/example/package.json
+++ b/example/package.json
@@ -16,7 +16,7 @@
     "gatsby-plugin-sharp": "^2.0.17",
     "gatsby-source-filesystem": "^2.0.16",
     "gatsby-transformer-sharp": "^2.1.10",
-    "navpush": "file:../",
+    "navpush": "file:..",
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
