--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@babel/preset-react": "^7.0.0",
     "autoprefixer": "^9.4.7",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.0.0",
+    "babel-jest": "^24.1.0",
     "babel-runtime": "^6.26.0",
     "camelcase": "^5.0.0",
     "classnames": "^2.2.6",
@@ -46,22 +46,23 @@
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
     "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
     "glob": "^7.1.3",
-    "jest": "^24.0.0",
-    "jest-dom": "^3.0.1",
+    "jest": "^24.1.0",
+    "jest-dom": "^3.1.0",
     "onchange": "^5.2.0",
     "postcss": "^7.0.14",
     "postcss-combine-duplicated-selectors": "^7.0.0",
     "postcss-easy-import": "^3.0.0",
     "postcss-namespace": "^1.1.1",
     "precss": "^4.0.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-testing-library": "^5.4.4",
+    "react": "^16.8.1",
+    "react-dom": "^16.8.1",
+    "react-testing-library": "^5.5.4",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^4.0.1",
     "rollup-plugin-commonjs": "^9.1.3",
